--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,12 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
+    <dimen name="sp_18">18sp</dimen>
+    <dimen name="sp_25">25dp</dimen>
+    <dimen name="dp_1">1dp</dimen>
+    <dimen name="dp_20">2dp</dimen>
+    <dimen name="dp_10">10dp</dimen>
+    <dimen name="sp_24">24sp</dimen>
+    <dimen name="dp_21">20dp</dimen>
+    <dimen name="dp_8">8dp</dimen>
 </resources>
