--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="big_basket_official">#54D804</color>
     <color name="big_basket_official_dark">#43AE03</color>
     <color name="Red">#FF0000</color>
+    <color name="grey">#757474</color>
 </resources>
