--- a/app/src/main/res/layout/basket_items_layout.xml
+++ b/app/src/main/res/layout/basket_items_layout.xml
@@ -3,12 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent">
-    <TextView
-        android:id="@+id/tvTotalItems"
-        android:layout_width="match_parent"
-        android:layout_marginTop="@dimen/sp_25"
-        android:textSize="@dimen/sp_18"
-        android:layout_height="wrap_content"/>
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:elevation="@dimen/dp_1"
@@ -50,7 +45,8 @@
                 android:layout_height="wrap_content"/>
             <ImageView
                 android:id="@+id/ivRemoveProduct"
-                android:layout_width="wrap_content"
+                android:layout_width="40dp"
+                android:background="@drawable/remove"
                 android:layout_below="@id/tvProductWight"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="70dp"
@@ -61,18 +57,20 @@
                 android:layout_width="wrap_content"
                 android:layout_below="@id/tvProductWight"
                 android:layout_alignParentEnd="true"
-                android:layout_marginEnd="50dp"
+                android:layout_marginEnd="54dp"
                 android:textStyle="bold"
-                android:textSize="@dimen/sp_18"
+                android:text="1"
+                android:textSize="@dimen/sp_25"
                 android:textColor="@color/Red"
                 android:layout_marginTop="@dimen/dp_10"
                 android:layout_height="wrap_content"/>
             <ImageView
                 android:id="@+id/ivAddProduct"
-                android:layout_width="wrap_content"
+                android:layout_width="40dp"
+                android:background="@drawable/add"
                 android:layout_below="@id/tvProductWight"
                 android:layout_alignParentEnd="true"
-                android:layout_marginEnd="20dp"
+                android:layout_marginEnd="10dp"
                 android:layout_marginTop="@dimen/dp_10"
                 android:layout_height="wrap_content"/>
     </RelativeLayout>
