--- a/app/src/main/res/layout/fragment_basket.xml
+++ b/app/src/main/res/layout/fragment_basket.xml
@@ -6,8 +6,10 @@
     android:id="@+id/linearLayout"
     android:layout_height="match_parent"
     tools:context=".ui.home.HomeFragment" >
+
 <androidx.recyclerview.widget.RecyclerView
     android:layout_width="match_parent"
     android:id="@+id/recyclerView"
-    android:layout_height="match_parent"/>
+    android:layout_height="wrap_content"/>
+
 </RelativeLayout>
