--- a/app/src/main/res/layout/fragment_basket.xml
+++ b/app/src/main/res/layout/fragment_basket.xml
@@ -6,10 +6,92 @@
     android:id="@+id/linearLayout"
     android:layout_height="match_parent"
     tools:context=".ui.home.HomeFragment" >
+   <androidx.cardview.widget.CardView
+       android:layout_width="match_parent"
+       android:id="@+id/cardview11"
+       android:layout_height="wrap_content">
+       <RelativeLayout
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content">
+    <ImageView
+        android:id="@+id/IvBesket"
+        android:layout_width="200dp"
+        android:background="@drawable/shopping_basket"
+        android:layout_centerHorizontal="true"
+        android:layout_height="200dp"/>
+    <TextView
+        android:id="@+id/tvempty"
+        android:layout_width="wrap_content"
+        android:layout_below="@id/IvBesket"
+        android:layout_centerHorizontal="true"
+        android:text="You Basket is empty"
+        android:textSize="@dimen/sp_22"
+        android:textColor="#1C1B1B"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:layout_width="200dp"
+        android:layout_below="@id/tvempty"
+        android:layout_marginTop="5dp"
+        android:layout_centerHorizontal="true"
+        android:text="START SHOPPING"
+        android:paddingTop="14dp"
+        android:paddingStart="38dp"
+        android:textStyle="bold"
+        android:layout_marginBottom="@dimen/dp_10"
+        android:textColor="@color/white"
+        android:background="@drawable/start"
+        android:layout_height="50dp"/>
+       </RelativeLayout>
+   </androidx.cardview.widget.CardView>
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_below="@id/cardview11"
+        android:layout_marginTop="@dimen/dp_30"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textColor="#029522"
+                android:textSize="@dimen/sp_22"
+                android:text="Saved For Later Items" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/dp_10"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                android:text="Swipe to save products in your basket to purchase later" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/dp_10"
+                android:textSize="14sp"
+                android:text="Unavailable items form chekout will automaticalli apper here" />
+            <ImageView
+                android:layout_width="100dp"
+                android:background="@drawable/notebook"
+                android:layout_gravity="center"
+                android:layout_marginBottom="@dimen/dp_10"
+                android:layout_marginTop="@dimen/dp_10"
+                android:layout_height="100dp"/>
 
+        </LinearLayout>
+
+
+
+    </androidx.cardview.widget.CardView>
 <androidx.recyclerview.widget.RecyclerView
     android:layout_width="match_parent"
     android:id="@+id/recyclerView"
     android:layout_height="wrap_content"/>
+
 
 </RelativeLayout>
