--- a/app/src/main/res/layout/fragment_mylist.xml
+++ b/app/src/main/res/layout/fragment_mylist.xml
@@ -7,6 +7,28 @@
     android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".ui.mylist.MyListFragment" >
+   <ImageView
+       android:layout_width="wrap_content"
+       android:layout_marginTop="50dp"
+       android:layout_gravity="center"
+       android:background="@drawable/shoppng"
+       android:layout_height="wrap_content"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:text="Sorry! There are no items in your basket"
+        android:layout_gravity="center"
+        android:textSize="@dimen/sp_20"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:layout_width="200dp"
+        android:layout_gravity="center"
+        android:text="START SHOPPING"
+        android:paddingTop="14dp"
+        android:paddingStart="38dp"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:background="@drawable/start"
+        android:layout_height="50dp"/>
    <androidx.recyclerview.widget.RecyclerView
     android:layout_width="match_parent"
     android:id="@+id/recyclerViewHorigentel"
