--- a/app/src/main/res/layout/activity_bottom_navigations.xml
+++ b/app/src/main/res/layout/activity_bottom_navigations.xml
@@ -52,27 +52,28 @@
                         android:textColor="@color/white" />
 
                 </LinearLayout>
+
                 <ImageButton
+                    android:id="@+id/imageBtnProfile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@null"
+                    android:layout_gravity="right"
                     android:layout_marginEnd="10dp"
-                    app:layout_constraintTop_toTopOf="@+id/toolbar"
+                    android:background="@null"
                     android:src="@drawable/ic_user"
                     app:layout_constraintBottom_toBottomOf="@id/toolbar"
                     app:layout_constraintEnd_toEndOf="@+id/toolbar"
-                    android:layout_gravity="right"
-                    />
+                    app:layout_constraintTop_toTopOf="@+id/toolbar" />
             </androidx.appcompat.widget.Toolbar>
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/nav_view"
             android:layout_width="0dp"
-            android:background="@color/white"
             android:layout_height="wrap_content"
             android:layout_marginStart="0dp"
             android:layout_marginEnd="0dp"
+            android:background="@color/white"
             app:labelVisibilityMode="labeled"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
