--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -243,7 +243,7 @@
                 android:layout_height="wrap_content"
                 android:drawablePadding="10dp"
                 android:padding="10dp"
-                android:text="About the product"
+                android:text="Storage And Uses"
                 android:textColor="@color/black"
                 android:textSize="14sp" />
 
